--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,5 @@ packages/react-devtools-extensions/shared/build
 packages/react-devtools-extensions/.tempUserDataDir
 packages/react-devtools-inline/dist
 packages/react-devtools-shell/dist
-packages/react-devtools-timeline/distnode_modules/
+packages/react-devtools-timeline/dist
+node_modules/
